# sandplover

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.rst  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: deltametrics.cube.BaseCube.doctree  deltametrics.cube.DataCube.doctree  deltametrics.cube.StratigraphyCube.doctree  deltametrics.io.BaseIO.doctree  deltametrics.io.NetCDFIO.doctree  deltametrics.mask.BaseMask.doctree  deltametrics.mask.CenterlineMask.doctree  deltametrics.mask.ChannelMask.doctree  deltametrics.mask.DepositMask.doctree  deltametrics.mask.EdgeMask.doctree  deltametrics.mask.ElevationMask.doctree  deltametrics.mask.FlowMask.doctree  deltametrics.mask.GeometricMask.doctree  deltametrics.mask.LandMask.doctree  deltametrics.mask.ShorelineMask.doctree  deltametrics.mask.ThresholdValueMask.doctree  deltametrics.mask.WetMask.doctree  deltametrics.mobility.calculate_channel_abandonment.doctree  deltametrics.mobility.calculate_channel_decay.doctree  deltametrics.mobility.calculate_channelized_response_variance.doctree  deltametrics.mobility.calculate_planform_overlap.doctree  deltametrics.mobility.calculate_reworking_fraction.doctree  deltametrics.mobility.channel_presence.doctree  deltametrics.mobility.check_inputs.doctree  deltametrics.plan.MorphologicalPlanform.doctree  deltametrics.plan.OpeningAnglePlanform.doctree  deltametrics.plan.Planform.doctree  deltametrics.plan.compute_channel_depth.doctree  deltametrics.plan.compute_channel_width.doctree  deltametrics.plan.compute_land_area.doctree  deltametrics.plan.compute_shoreline_distance.doctree  deltametrics.plan.compute_shoreline_length.doctree  deltametrics.plan.compute_shoreline_roughness.doctree  deltametrics.plan.compute_surface_deposit_age.doctree  deltametrics.plan.compute_surface_deposit_time.doctree  deltametrics.plan.morphological_closing_method.doctree  deltametrics.plan.shaw_opening_angle_method.doctree  deltametrics.plot.VariableInfo.doctree  deltametrics.plot.VariableSet.doctree  deltametrics.plot.show_histograms.doctree  (+72 more)
.doctrees/guides/: 10min.doctree  devguide.doctree  userguide.doctree
.doctrees/meta/: conduct.doctree  contributing.doctree  installing.doctree  license.doctree  planning.doctree
.doctrees/reference/: index.doctree
.github/workflows/: build.yml  deploy.yml  greetings.yml
_autosummary/: deltametrics.cube.BaseCube.html  deltametrics.cube.DataCube.html  deltametrics.cube.StratigraphyCube.html  deltametrics.io.BaseIO.html  deltametrics.io.NetCDFIO.html  deltametrics.mask.BaseMask.html  deltametrics.mask.CenterlineMask.html  deltametrics.mask.ChannelMask.html  deltametrics.mask.DepositMask.html  deltametrics.mask.EdgeMask.html  deltametrics.mask.ElevationMask.html  deltametrics.mask.FlowMask.html  deltametrics.mask.GeometricMask.html  deltametrics.mask.LandMask.html  deltametrics.mask.ShorelineMask.html  deltametrics.mask.ThresholdValueMask.html  deltametrics.mask.WetMask.html  deltametrics.mobility.calculate_channel_abandonment.html  deltametrics.mobility.calculate_channel_decay.html  deltametrics.mobility.calculate_channelized_response_variance.html  deltametrics.mobility.calculate_planform_overlap.html  deltametrics.mobility.calculate_reworking_fraction.html  deltametrics.mobility.channel_presence.html  deltametrics.mobility.check_inputs.html  deltametrics.plan.MorphologicalPlanform.html  deltametrics.plan.OpeningAnglePlanform.html  deltametrics.plan.Planform.html  deltametrics.plan.compute_channel_depth.html  deltametrics.plan.compute_channel_width.html  deltametrics.plan.compute_land_area.html  deltametrics.plan.compute_shoreline_distance.html  deltametrics.plan.compute_shoreline_length.html  deltametrics.plan.compute_shoreline_roughness.html  deltametrics.plan.compute_surface_deposit_age.html  deltametrics.plan.compute_surface_deposit_time.html  deltametrics.plan.morphological_closing_method.html  deltametrics.plan.shaw_opening_angle_method.html  deltametrics.plot.VariableInfo.html  deltametrics.plot.VariableSet.html  deltametrics.plot.show_histograms.html  (+72 more)
_downloads/003bc2c589f67f7742d66a9d28e661c7/: index-5.py
_downloads/00cc3f46d318ece8f614f9b518aab8e9/: userguide_section_type_demos.py
_downloads/01314eb317e80a782fa7f622be4b494a/: deltametrics-plan-compute_surface_deposit_age-1.py
_downloads/021078668125886da73af77afdd51cca/: sandplover-plan-OpeningAnglePlanform-1.py
_downloads/03eaded896090f84205fc85389df7a2d/: index-4.py
_downloads/051336b26fe39d7c7e9ea681d063889c/: deltametrics-section-StrikeSection-1.py
_downloads/076172e83edcca0492c18402cb4cc3d3/: deltametrics-strat-compute_net_to_gross-1.py
_downloads/093dffc9533257ba545cd4d3f288a3f4/: sandplover-plot-show_one_dimensional_trajectory_to_strata-1.py
_downloads/0b93678a9a1aeaf619487a79fa34daad/: deltametrics-strat-compute_thickness_surfaces-1.py
_downloads/0d4c330df008b0ecdc6487b5728cb838/: deltametrics-mask-DepositMask-1.py
_downloads/0eb119e24e419c27f0b94b4704e5ba21/: aggradation_preserved_time-1.py
_downloads/0fc0c623035d29a5b5bf28e2237f6f27/: sandplover-section-RadialSection-2.py
_downloads/14c771c7579e83c6b2897db7261395b4/: deltametrics-mask-ShorelineMask-1.py
_static/: style.css
deltametrics/: __init__.py  _version.py  cube.py  io.py  mask.py  mobility.py  plan.py  plot.py  section.py  strat.py  utils.py
docs/: Makefile
guides/: 10min.html  devguide.html  userguide.html
meta/: conduct.html  contributing.html  installing.html  license.html  planning.html
reference/: index.html
sandplover/: __init__.py  cube.py  io.py  mask.py  mobility.py  plan.py  plot.py  section.py  strat.py  utils.py
tests/: cube_test.py  io_test.py  mask_test.py  mobility_test.py  plan_test.py  plot_test.py  section_test.py  strat_test.py  test_cube.py  test_io.py  test_mask.py  test_mobility.py  test_plan.py  test_plot.py  test_section.py  test_strat.py  test_utils.py  utils_test.py
(+451 files in other folders)
