[project]
name = "sandplover"
requires-python = ">=3.11"
description = "Tools for manipulating sedimentologic data cubes."
keywords = []
authors = [
    { name = "Andrew Moodie", email = "amoodie@tamu.edu" },
]
maintainers = [
    { name = "Andrew Moodie", email = "amoodie@tamu.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "h5netcdf",
    "h5py",
    "importlib-resources; python_version < '3.12'",
    "matplotlib",
    "netCDF4",
    "numba",
    "numpy",
    "pooch",
    "pyyaml",
    "scikit-image",
    "scipy",
    "xarray",
]
dynamic = [
    "version",
    "readme",
]

[project.license]
text = "MIT"

[project.urls]
documentation = "https://sandpiper-toolchain.github.io/sandplover"
homepage = "https://github.com/sandpiper-toolchain/sandplover"
repository = "https://github.com/sandpiper-toolchain/sandplover"

[project.optional-dependencies]
docs = [
    "pyvista",
    "sphinx",
]
testing = [
    "coveralls",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

[tool.isort]
combine_as_imports = true
known_first_party = "sandplover"
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools.dynamic.version]
attr = "sandplover._version.__version__"

[tool.setuptools.package-data]
sandplover = [
    "sample_data/registry.txt",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "sandplover*",
]

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "sandplover",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--durations=16",
    "--strict-markers",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
